# modgrad

./: .gitignore  Cargo.toml  README.md  bench_gpu.rs  gemma  program.md  serve.rs  test_candle.rs  test_gemma4.rs  test_gemma4_candle.rs  test_gguf.rs  test_q4k.rs  test_remu.rs
anneal/: Cargo.toml  README.md
anneal/src/: convergence.rs  lib.rs
crates/minictm/: Cargo.toml
crates/minictm/src/: main.rs
crates/modgrad-attribution/: Cargo.toml
crates/modgrad-attribution/src/: lib.rs
crates/modgrad-attribution/tests/: brain_attribution.rs  win_test_controlled.rs
crates/modgrad-blt/: Cargo.toml
crates/modgrad-blt/src/: byteify.rs  cerebellum.rs  checkpoint.rs  cross_attn.rs  decoder.rs  encoder.rs  entropy.rs  lib.rs  model.rs  patcher.rs  trainer.rs
crates/modgrad-blt/tests/: byteify.rs  gradcheck.rs
crates/modgrad-codec/: Cargo.toml
crates/modgrad-codec/examples/: orpheus_e2e.rs  snac_ab_modgrad.rs  snac_smoke.rs
crates/modgrad-codec/scripts/: snac_ab_pytorch.py  snac_export.py
crates/modgrad-codec/src/: audio_codec.rs  cifar.rs  edge_of_chaos.rs  fsq.rs  genome.rs  lib.rs  librispeech.rs  ngram_hash.rs  retina.rs  snac.rs  snac_loader.rs  stl10.rs  topdown.rs  vlm_projector.rs  vqvae.rs
crates/modgrad-compute/: Cargo.toml
crates/modgrad-compute/examples/: bench_brain_resident.rs  bench_resident.rs
crates/modgrad-compute/src/: accel.rs  backend.rs  cuda_backend.rs  kv_buffer.rs  lib.rs  neuron.rs  ops.rs  optimizer_state.rs  rayon_shim.rs  tensor.rs  tensor_device.rs
crates/modgrad-ctm/: Cargo.toml
crates/modgrad-ctm/src/: bridge.rs  cerebellum.rs  cerebellum_service.rs  config.rs  cortex.rs  ctm_resident.rs  curriculum.rs  dispatch_profile.rs  ffn.rs  filter.rs  forward.rs  frozen_transformer.rs  graph.rs  latent.rs  lib.rs  logit_modulator.rs  loss.rs  modulator.rs  monarch.rs  organism.rs  planning.rs  plural.rs  pos.rs  proxies.rs  qwen_cerebellum.rs  rayon_shim.rs  resident.rs  schedule.rs  search_space.rs  synapse.rs  train.rs  vin.rs  weights.rs
crates/modgrad-ctm/tests/: gpu_ctm_region_bench.rs  small_scale_bptt.rs
crates/modgrad-data/: Cargo.toml
crates/modgrad-data/src/: data_stream.rs  lib.rs  stream.rs  text_gen.rs  tokenize.rs  tokens.rs  unified_tokenizer.rs  word_completion.rs
crates/modgrad-device/: Cargo.toml  build.rs
crates/modgrad-device/examples/: bench_matvec.rs  gemma4_infer.rs  gemma4_rocm.rs  gemma4_run.rs  gemma_serve.rs  gguf_inspect.rs  gpu_matvec_check.rs  miopen_probe.rs  orpheus_run.rs  rocm_dp4a_check.rs  rocm_glue_check.rs  rocm_matvec_bench.rs  rocm_matvec_check.rs
crates/modgrad-device/kernels/: adamw.hip  dequant_q4k.hip  gemma_glue.hip  matvec_q4k.hip  matvec_q4k_dp4a.hip  matvec_q5k.hip  matvec_q6k.hip  matvec_q6k_dp4a.hip  per_neuron_glu_batched.hip  rms_norm.hip  rms_norm_backward.hip  rope_backward.hip  sdpa_decode.hip  sdpa_decode_flash.hip
crates/modgrad-device/src/: cuda.rs  device.rs  gpu.rs  lib.rs  matvec.spv  rayon_shim.rs  rocm_gemma.rs  superlinear.spv  test_lock.rs  weight_cache.rs
crates/modgrad-device/tests/: backend_buffer.rs  backend_parity.rs  backend_proptest.proptest-regressions  backend_proptest.rs  batched_linear.rs  dequant_q4k.rs  device_buffer_affinity.rs  gpu_matmul_bench.rs  miopen_ops.rs  resident_matmul_bf16.rs  resident_matmul_rms.rs  resident_super_linear_bwd.rs  typed_rms_norm.rs  typed_rope.rs  typed_sdpa.rs
crates/modgrad-ffn/: Cargo.toml
crates/modgrad-ffn/src/: lib.rs  resident.rs
crates/modgrad-gemma/: Cargo.toml  build.rs
crates/modgrad-gemma/examples/: gemma4_rocm.rs  gemma_serve.rs
crates/modgrad-gemma/src/: lib.rs  rocm_gemma.rs  serve_model.rs
crates/modgrad-io/: Cargo.toml
crates/modgrad-io/src/: backend.rs  config_file.rs  control.rs  dataloader.rs  episode.rs  flatbuf.rs  gguf.rs  inference.rs  lib.rs  memory.rs  qwen2.rs  safetensors.rs  service.rs  telemetry.rs  telemetry_transport.rs  tokenizer.rs  types.rs
crates/modgrad-memory/: Cargo.toml
crates/modgrad-memory/src/: episodic.rs  lib.rs  replay.rs  sleep.rs
crates/modgrad-persist/: Cargo.toml
crates/modgrad-persist/src/: bpe.rs  lib.rs  persist.rs  quantize.rs  vocab.rs
crates/modgrad-runtime/: Cargo.toml
crates/modgrad-runtime/src/: actors.rs  brain.rs  config.rs  ctm.rs  daemon.rs  episode.rs  filter.rs  forward.rs  homeostasis.rs  lib.rs  nc_io.rs  nc_socket.rs  neuron.rs  organism.rs  regional.rs  session.rs  synapse.rs  sync.rs  tick_state.rs  train_bptt.rs  training_data.rs  weights.rs
crates/modgrad-runtime/tests/: actor_brain.rs  regional_byte_train.rs  regional_forward.rs
crates/modgrad-serve/: Cargo.toml
crates/modgrad-serve/src/: lib.rs
crates/modgrad-substrate/: Cargo.toml
crates/modgrad-substrate/examples/: analyze.rs  demo.rs  therm.rs  watch.rs
crates/modgrad-substrate/src/: lib.rs
crates/modgrad-training/: Cargo.toml  TODO-observability.md
crates/modgrad-training/src/: autoresearch.rs  checkpoint.rs  checkpoint_bundle.rs  ctc.rs  dream.rs  grad_accum.rs  grad_ckpt.rs  inference.rs  lib.rs  metrics.rs  optim.rs  outer_optimizer.rs  replay.rs  trainer.rs  trainer_loop.rs
crates/modgrad-transformer/: Cargo.toml
crates/modgrad-transformer/src/: adaln.rs  arch.rs  attention.rs  block.rs  builder.rs  config.rs  dblock.rs  denoiser.rs  diffusion.rs  (+20 more)
crates/modgrad-wasm/: Cargo.toml
crates/nanochat-rs/: Cargo.toml
crates/sonotxt/: Cargo.toml  README.md
debugger/: Cargo.toml
debugger/src/: connection.rs  main.rs
examples/babyai_probe/: Cargo.toml  cortex_vs_raw_sklearn.py  export_demos.py  export_rgb_demos.py  render_one_frame.py  sanity_rgb.py  sanity_signal.py
examples/bench_brain_crossover/: Cargo.toml
examples/bench_maze_resident/: Cargo.toml
examples/bench_maze_resident_medium/: Cargo.toml
examples/blt_byteify_smoke/: Cargo.toml
isis/: Cargo.toml
isis/benchmarks/: qec_three_way.py  run_qec_benchmark.py
isis/configs/: multimodal.toml
isis/curriculum/: build_epimem.py
isis/runtime/: Cargo.toml
isis/scripts/: export_onnx.py  extract_features.py  precompute_parent.py
isis/src/: daemon.rs  isisd.rs  lib.rs  main.rs
(+383 files in other folders)
