[package]
name = "minictm"
version = "0.1.0"
edition = "2024"
description = "nanoGPT but for CTMs — minimal example of modgrad SDK"
license = "MIT"

[[bin]]
name = "minictm"
path = "src/main.rs"

[dependencies]
modgrad-runtime = { path = "../modgrad-runtime" }
modgrad-compute = { path = "../modgrad-compute" }
