[package]
name = "modgrad-attribution"
version = "0.1.0"
edition = "2024"
description = "Gradient-based data attribution: per-sample influence ranking via Johnson-Lindenstrauss projected gradient cosine similarity. Inspired by Motive (NVIDIA, 2026)."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
modgrad-compute = { path = "../modgrad-compute" }

[dev-dependencies]
# Integration test wiring: build a tiny brain, extract per-sample
# gradients, prove the attribution pipeline works end-to-end on real
# RegionalGradients. modgrad-attribution itself stays modality-agnostic.
modgrad-ctm = { path = "../modgrad-ctm" }
modgrad-traits = { path = "../modgrad-traits" }
