[package]
name = "modgrad-codec"
version = "0.1.0"
edition = "2024"
description = "Modality codecs for the modgrad ML SDK: vision, audio, text"
license = "MIT"

[dependencies]
modgrad-compute = { path = "../modgrad-compute" }
modgrad-persist = { path = "../modgrad-persist" }
modgrad-traits = { path = "../modgrad-traits" }
serde = { version = "1", features = ["derive"] }
rayon = "1"
wincode = "0.5"
wincode-derive = "0.4"
