[package]
name = "modgrad-compute"
version = "0.1.0"
edition = "2024"
description = "Compute primitives for the modgrad ML SDK: Linear, ops, tensor"
license = "MIT"

[features]
cuda = ["modgrad-device/cuda", "dep:cudarc", "dep:candle-kernels"]
# Enables `GpuVec::Hip` backed by hipMalloc'd device memory. Required
# for any code path that wants weights / activations to stay
# device-resident across dispatches (the GPU-residency project).
rocm = ["modgrad-device/rocm"]

[dependencies]
modgrad-device = { path = "../modgrad-device" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
wincode = "0.5"
wincode-derive = "0.4"
# Pure-Rust SIMD GEMM used by `CpuTensor::matmul`. Same version as the FFN
# crate already uses; shared so Cargo resolves one copy.
matrixmultiply = "0.3"

# CUDA (optional)
cudarc = { version = "0.19", optional = true, default-features = false, features = [
    "std", "driver", "cublas", "nvrtc",
    "fallback-dynamic-loading", "cuda-12060",
] }
candle-kernels = { path = "../../../candle/candle-kernels", optional = true }
