[package]
name = "modgrad-ctm"
version = "0.1.0"
edition = "2024"
description = "Continuous Thought Machine architecture for the modgrad ML SDK"
license = "MIT"

[features]
# Plumb backend features through to modgrad-device so downstream
# binaries can turn on GPU backends via a single feature on this crate.
# `rocm` also lights up the `QwenCerebellum` adapter that wraps a
# device-resident `GptModelResident` as a `FrozenCerebellum` — that's
# why `modgrad-transformer` joins the gate as an optional dep.
default = []
# wasm-threads: on wasm32, light up REAL rayon (instead of the serial
# rayon_shim) so the browser build can run the regional forward across a
# wasm-bindgen-rayon + SharedArrayBuffer thread pool. OFF by default, so the
# normal single-threaded wasm build keeps the serial shim and native is
# entirely unaffected (native always links real rayon via the target dep
# below; this feature only adds the wasm32 rayon dep). Enabled by
# `crates/modgrad-wasm` `parallel` feature; see scripts/build-engine-parallel.sh.
wasm-threads = ["dep:rayon"]
kfd = ["modgrad-device/kfd"]
rocm = [
    "modgrad-device/rocm",
    "modgrad-compute/rocm",
    "dep:modgrad-transformer",
    "modgrad-transformer/rocm",
]
cuda = ["modgrad-device/cuda"]
gpu = ["modgrad-device/gpu"]

[dependencies]
modgrad-traits = { path = "../modgrad-traits" }
modgrad-compute = { path = "../modgrad-compute" }
modgrad-device = { path = "../modgrad-device" }
modgrad-persist = { path = "../modgrad-persist" }
modgrad-memory = { path = "../modgrad-memory" }
# Optional: pulled in by the `rocm` feature for `QwenCerebellum`. The
# adapter wraps `GptModelResident` (resident transformer stack) as a
# `FrozenCerebellum`. Default builds don't link against modgrad-transformer
# at all — keeps non-rocm consumers lean.
modgrad-transformer = { path = "../modgrad-transformer", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wincode = "0.5"
wincode-derive = "0.4"
half = "2"
bincode = "1"
# Pure-Rust SIMD GEMM (cache-blocked matmul). Used by the FFN cerebellum
# for ~10-30x speedup over scalar rayon loops.
matrixmultiply = "0.3"

# On native, rayon is always linked (the rayon_shim re-exports its prelude).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

# On wasm32, rayon has no threads by default, so the rayon_shim provides a
# serial fallback. This optional dep is pulled in ONLY by the `wasm-threads`
# feature (the parallel browser build, compiled with +atomics + build-std and
# a wasm-bindgen-rayon thread pool); without the feature it is absent and the
# serial shim stays — keeping the default wasm build byte-for-byte unchanged.
[target.'cfg(target_arch = "wasm32")'.dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
