[package]
name = "modgrad-data"
version = "0.1.0"
edition = "2024"
description = "Data pipeline for the modgrad ML SDK: tokenization, streaming"
license = "MIT"

[dependencies]
modgrad-traits = { path = "../modgrad-traits" }
modgrad-compute = { path = "../modgrad-compute" }
modgrad-codec = { path = "../modgrad-codec" }
serde = { version = "1", features = ["derive"] }
