[package]
name = "modgrad-ffn"
version = "0.1.0"
edition = "2024"
description = "FFN architecture (SwiGLU MLP language model) for the modgrad ML SDK"
license = "MIT"

[dependencies]
modgrad-traits  = { path = "../modgrad-traits" }  # for ParamIter
modgrad-compute = { path = "../modgrad-compute" }
modgrad-device  = { path = "../modgrad-device" }
modgrad-persist = { path = "../modgrad-persist" }
serde = { version = "1", features = ["derive"] }
rayon = "1"
bincode = "1"
wincode = "0.5"
wincode-derive = "0.4"
# Pure-Rust SIMD GEMM (cache-blocked matmul). Same version as modgrad-compute.
matrixmultiply = "0.3"
