[package]
name = "modgrad-gemma"
version = "0.1.0"
edition = "2024"
description = "Gemma-4 GGUF inference + Anthropic-compatible server, built on the modgrad-device SDK"
license = "MIT"

[features]
default = []
# Fully GPU-resident inference on the ROCm/HIP backend (gfx1102). Pulls in the
# device crate's rocm backend + its compiled HIP kernels.
rocm = ["modgrad-device/rocm"]

[dependencies]
modgrad-device = { path = "../modgrad-device" }
libc = "0.2"
rayon = "1"

[dev-dependencies]
# The gemma_serve example loads the canonical tokenizer.json and parses JSON.
tokenizers = "0.21"
serde_json = "1"
