[package]
name = "modgrad-io"
version = "0.1.0"
edition = "2024"
description = "IO, serialization, memory, and inference backends for the modgrad ML SDK"
license = "MIT"

[features]
onnx = ["dep:ort"]
gguf = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
# Enables the safetensors loader for HF-format models (Qwen2, Llama, ...)
# and the device-resident upload path (`qwen2.rs`).  The resident upload
# requires `modgrad-transformer/rocm`, which propagates to compute/device.
rocm = ["modgrad-transformer/rocm", "modgrad-compute/rocm", "modgrad-device/rocm"]
telemetry = ["dep:quinn", "dep:rustls", "dep:tokio", "dep:rcgen"]

[dependencies]
modgrad-persist = { path = "../modgrad-persist" }
modgrad-transformer = { path = "../modgrad-transformer" }
modgrad-compute = { path = "../modgrad-compute" }
modgrad-device = { path = "../modgrad-device" }
serde = { version = "1", features = ["derive"] }
wincode = "0.5"
wincode-derive = "0.4"
serde_json = "1"
toml = "0.8"
tokenizers = "0.21"
half = "2"

# ONNX backend
ort = { version = "2.0.0-rc.12", optional = true }

# GGUF backend (candle from git — main branch has gemma4)
candle-core = { git = "https://github.com/huggingface/candle", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle", optional = true }

# QUIC transport for telemetry
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
tokio = { version = "1", optional = true, features = ["rt", "net", "io-util", "macros"] }
rcgen = { version = "0.13", optional = true }
