[package]
name = "modgrad-memory"
version = "0.1.0"
edition = "2024"
description = "Episodic memory, hippocampus, replay buffer, and sleep consolidation — agent memory primitives for the modgrad ML SDK"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"

# rayon has no threads on wasm32-unknown-unknown; the rayon_shim module
# provides a serial fallback there, so rayon is native-only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
