[package]
name = "modgrad-training"
version = "0.1.0"
edition = "2024"
description = "Training infrastructure for the modgrad ML SDK: optimizer, scheduler, checkpointing"
license = "MIT"

[dependencies]
modgrad-traits = { path = "../modgrad-traits" }
modgrad-compute = { path = "../modgrad-compute" }
modgrad-data = { path = "../modgrad-data" }
modgrad-persist = { path = "../modgrad-persist" }
serde = { version = "1", features = ["derive"] }
wincode = "0.5"
wincode-derive = "0.4"
serde_json = "1"
# bincode 1.x for the on-disk format of CheckpointBundle. Same codec the
# rest of the SDK already uses (FfnWeights::save, modgrad-persist, etc.).
bincode = "1"
# Ctrl+C handling for graceful-save on SIGINT. One install per runtime,
# shared across the Trainer family.
ctrlc = "3"
